--- a/requirements.txt
+++ b/requirements.txt
@@ -64,6 +64,7 @@ Pillow==9.1.0
 prometheus-client==0.14.1
 prometheus-flask-exporter==0.20.1
 protobuf==3.20.1
+psutil==5.9.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
@@ -105,7 +106,7 @@ tf-estimator-nightly==2.8.0.dev2021122109
 threadpoolctl==3.1.0
 tk==0.1.0
 tkinter-math==0.2.4
-typing_extensions==4.2.0
+typing-extensions==4.2.0
 urllib3==1.26.9
 waitress==2.1.1
 websocket-client==1.3.2
