--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ alabaster==0.7.12
 alembic==1.7.7
 astunparse==1.6.3
 attrs==21.4.0
+autopep8==1.6.0
 av==9.2.0
 Babel==2.10.1
 cached-property==1.5.2
@@ -67,6 +68,7 @@ protobuf==3.20.1
 psutil==5.9.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycodestyle==2.8.0
 pycparser==2.21
 Pygments==2.12.0
 PyJWT==2.3.0
@@ -106,6 +108,7 @@ tf-estimator-nightly==2.8.0.dev2021122109
 threadpoolctl==3.1.0
 tk==0.1.0
 tkinter-math==0.2.4
+toml==0.10.2
 typing-extensions==4.2.0
 urllib3==1.26.9
 waitress==2.1.1
